feat: Secure configuration, environment variables configured